# urdf_sim_tutorial

./: .pre-commit-config.yaml  CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  package.xml
config/: 09a-minimal.yaml  diffdrive.yaml  gripper.yaml  head.yaml  joints.yaml  mimic-gripper.yaml
launch/: 09-joints.launch  09-joints.launch.py  09a-minimal.launch.py  10-head.launch  10-head.launch.py  12-gripper.launch  12-gripper.launch.py  13-diffdrive.launch  13-diffdrive.launch.py  gazebo.launch  gazebo.launch.py
rviz/: odom_urdf.rviz
urdf/: 09-publishjoints.urdf.xacro  09a-minimal.urdf.xacro  10-firsttransmission.urdf.xacro  11-limittransmission.urdf.xacro  12-gripper.urdf.xacro  12a-mimic-gripper.urdf.xacro  13-diffdrive.urdf.xacro
